# AVCodecStudy_2022Version

./: README.md  settings.gradle
app/: build.gradle  temp
app/src/androidTest/java/com/mingzz__/a2022h26x/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mingzz__/a2022h26x/: MainActivity.java
app/src/main/java/com/mingzz__/h26x/camera2/: Camera2ClientActivity.java  H26xCamera2Activity.java
app/src/main/java/com/mingzz__/h26x/code_play/: PlayActivity.java
app/src/main/java/com/mingzz__/h26x/golomb_codec/: GolombCodecActivity.java
app/src/main/java/com/mingzz__/h26x/projection/: MediaProjectionClientActivity.java  MediaProjectionServerActivity.java  ProjectionCallback.java  ProjectionService.java
app/src/main/java/com/mingzz__/h26x/rtmp/: ProjectionActivity.java  RTMPActivity.java
app/src/main/java/com/mingzz__/h26x/web_socket/: Client.java  Server.java
app/src/main/java/com/mingzz__/util/: FileUtil.java  L.java  PermissionUtil.java  YUVUtil.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/cpp/: LoadJNI.cpp  example.c
app/src/main/jni/cpp/x264/: X264.cpp
app/src/main/jni/head/: load_jni.h
app/src/main/jni/head/x264/: x264_codec.h
app/src/main/res/layout/: h26x_camera2_activity.xml  h26x_play_activity.xml  projection_server_activity.xml  rtmp_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mingzz__/a2022h26x/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
